--- a/stylesheets/scss/layouts/_homepage.scss
+++ b/stylesheets/scss/layouts/_homepage.scss
@@ -325,7 +325,7 @@
       gap: 1rem;
     }
 
-    button {
+    a {
       width: 100%;
       justify-content: center;
     }
